initial main landing page done

--- a/mhb-prtflio/src/styles.sass
+++ b/mhb-prtflio/src/styles.sass
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+$bgcolor: rgb(234,234,234) 
+
+html, body
+    background-color: $bgcolor
+    height: 100%
+    width: 100%
+    font-family: 'Roboto Mono', monospace
