add about me page

--- a/mhb-prtflio/src/app/app.component.html
+++ b/mhb-prtflio/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-home></app-home>
+<!-- <app-project-modal></app-project-modal> -->
+<!-- <app-home></app-home> -->
+<!-- <app-about-me></app-about-me> -->
+<router-outlet></router-outlet>
