--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,19 +6,19 @@
           <div (click)="firstClick()" class="icon-container"><img id="maze" src="assets/maze.png" /></div>
           <div  (click)="firstClick()" *ngIf="!firstOpen" class="right-arrow-container"><img id="right" src="assets/right-caret.png" /></div>
           <div  (click)="firstClick()" *ngIf="firstOpen" class="left-arrow-container"><img id="left" src="assets/left-caret.png" /></div>
-          <div class="caption-container"> <span *ngIf="firstCaption" [@myAnimation] class="caption" data-toggle="modal" data-target="#firstProjectModal" >Pathfinding Visualizer (Angular)</span> </div>
+          <div class="caption-container"> <span *ngIf="firstCaption" [@myAnimation] class="caption" data-toggle="modal" data-target="#firstProjectModal" >Pathfinding Visualizer (Angular) &#8250;</span> </div>
         </div>
         <div class="second-project">
           <div (click)="secondClick()" class="icon-container"><img id="scheduler" src="assets/scheduler.png" /> </div>
           <div  (click)="secondClick()" *ngIf="!secondOpen" class="right-arrow-container"><img id="right" src="assets/right-caret.png" /></div>
           <div  (click)="secondClick()" *ngIf="secondOpen" class="left-arrow-container"><img id="left" src="assets/left-caret.png" /></div>
-          <div class="caption-container"> <span *ngIf="secondCaption" [@myAnimation] class="caption" data-toggle="modal" data-target="#secondProjectModal">Scheduler (MERN)</span> </div>
+          <div class="caption-container"> <span *ngIf="secondCaption" [@myAnimation] class="caption" data-toggle="modal" data-target="#secondProjectModal">Scheduler (MERN) &#8250;</span> </div>
         </div>
         <div class="third-project">
           <div (click)="thirdClick()" class="icon-container"><img id="travel" src="assets/travel.png" /></div>
           <div  (click)="thirdClick()" *ngIf="!thirdOpen" class="right-arrow-container"><img id="right" src="assets/right-caret.png" /></div>
           <div  (click)="thirdClick()" *ngIf="thirdOpen" class="left-arrow-container"><img id="left" src="assets/left-caret.png" /></div>
-          <div class="caption-container">  <span *ngIf="thirdCaption" [@myAnimation] class="caption"  data-toggle="modal" data-target="#thirdProjectModal">Travel Reservation Site (MEANestJS) </span> </div>
+          <div class="caption-container">  <span *ngIf="thirdCaption" [@myAnimation] class="caption"  data-toggle="modal" data-target="#thirdProjectModal">Travel Reservation Site (MEANestJS) &#8250; </span> </div>
         </div>
       </div>
     </div>
@@ -48,19 +48,19 @@
           <div (click)="fourthClick()" class="icon-container"><img id="stock" src="assets/stock.png" /></div>
           <div  (click)="fourthClick()" *ngIf="!fourthOpen" class="right-arrow-container"><img id="right" src="assets/right-caret.png" /></div>
           <div  (click)="fourthClick()" *ngIf="fourthOpen" class="left-arrow-container"><img id="left" src="assets/left-caret.png" /></div>
-          <div class="caption-container"> <span *ngIf="fourthCaption" [@myAnimation] class="caption" data-toggle="modal" data-target="#fourthProjectModal">Hidden Markov Model (HMM) based Stock Predictor (Python) </span>  </div>
+          <div class="caption-container"> <span *ngIf="fourthCaption" [@myAnimation] class="caption" data-toggle="modal" data-target="#fourthProjectModal">Hidden Markov Model (HMM) based Stock Predictor (Python)  &#8250;</span>  </div>
         </div>
         <div class="fifth-project">
           <div (click)="fifthClick()" class="icon-container"><img id="brain" src="assets/brain.png" /></div>
           <div  (click)="fifthClick()" *ngIf="!fifthOpen" class="right-arrow-container"><img id="right" src="assets/right-caret.png" /></div>
           <div  (click)="fifthClick()" *ngIf="fifthOpen" class="left-arrow-container"><img id="left" src="assets/left-caret.png" /></div>
-          <div class="caption-container">  <span *ngIf="fifthCaption" [@myAnimation] class="caption" data-toggle="modal" data-target="#fifthProjectModal">Semantic Segmentation (PyTorch) </span> </div>
+          <div class="caption-container">  <span *ngIf="fifthCaption" [@myAnimation] class="caption" data-toggle="modal" data-target="#fifthProjectModal">Semantic Segmentation (PyTorch)  &#8250;</span> </div>
         </div>
         <div class="sixth-project">
           <div (click)="sixthClick()" class="icon-container"><img id="magnifying" src="assets/perceptron.png" /></div>
           <div  (click)="sixthClick()" *ngIf="!sixthOpen" class="right-arrow-container"><img id="right" src="assets/right-caret.png" /></div>
           <div  (click)="sixthClick()" *ngIf="sixthOpen" class="left-arrow-container"><img id="left" src="assets/left-caret.png" /></div>
-          <div class="caption-container">  <span *ngIf="sixthCaption" [@myAnimation] class="caption" data-toggle="modal" data-target="#sixthProjectModal">Perceptron Neural Network (Python) </span> </div>
+          <div class="caption-container">  <span *ngIf="sixthCaption" [@myAnimation] class="caption" data-toggle="modal" data-target="#sixthProjectModal">Perceptron Neural Network (Python)  &#8250;</span> </div>
         </div>
       </div>
     </div>
